# prism

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
docs/: README.md  SPEC.md  TODO.md  changelog.md  packaging.md
docs/architecture/: README.md  component-architecture.md  system-architecture.md
docs/collaboration/: README.md  contributors.md
docs/design/: README.md  ai-collaboration.md  plugin-system.md  protocol-design.md
docs/documentation/: README.md
docs/organizations/: README.md
docs/people/: README.md
docs/roadmap/: README.md  deliverables.md  development-roadmap.md
docs/specifications/: README.md  api-specification.v0.md  core-specification.v0.md  core-specification.v1.md  indexing-specification.v0.md  library-specification.v0.md  sync-specification.v0.md
src/prism/: README.md  __init__.py  exceptions.py  folder.py  page.py  prism.py  types.py
src/prism/cli/: README.md  __init__.py  folder.py  page.py  prism.py
src/prism/core/: folder.py  page.py
src/prism/filesystem/: __init__.py  disk.py  memory.py
src/prism/generators/: base.py  breadcrumbs.py  pages.py  siblings.py  subdirs.py  toc.py
src/prism/utils/: paths.py
test-prism/: README.md
tests/: conftest.py  test_prism.py
tests/cli/: test_cli.py  test_cli_2.py  test_prism.py
tests/core/: test_folder.py  test_page.py
tests/filesystem/: test_disk.py  test_disk_path_handling.py  test_memory.py
tests/generators/: test_breadcrumbs.py  test_pages.py  test_siblings.py  test_subdirs.py  test_toc.py
tests/utils/: paths.py
